...
    >
      <Tabs.Screen
        name="index"
        options={{
          title: t("headers.lucide"),
          headerShown: false,
          tabBarLabel: "Accueil",
          tabBarAccessibilityLabel: "Accueil",
          tabBarIcon: ({ focused, color, size }) => (
            <Ionicons name={focused ? "home" : "home-outline"} size={size} color={color} />
          ),
        }}
      />
...
